updated readme - reformulada secção Como executar o projeto